app/globals.css
/* ... */
.job-details__start-view > p:nth-child(2) {
  opacity: 0.55;
  color: #24292d;
  font-size: 14px;
  width: 275px;
  text-align: center;
}

.job-details > div {
  height: 100%;
}

.job-details > div > img {
  width: 100%;
  height: 174px;
  position: absolute;
  z-index: 0;
  top: 0;
  object-fit: cover;
  border-top-right-radius: 8px;
  user-select: none;
}

.job-details__other {
}

.job-details__footer {
  margin-left: 42px;
  margin-right: 42px;
  margin-top: 33px;
  padding-top: 13px;
  border-top: 1px solid #dce2e8;
}

.job-details__footer-text {
  color: #858b8f;
  font-size: 10px;
}

/* APPLY BTN */
.apply-btn {
  position: absolute;
  background-color: var(--color-accent);
  z-index: 2;
  color: rgba(255, 255, 255, 0.92);
  font-size: 11px;
  padding: 5px 10px 6px;
  border-radius: 3px;
  top: 12px;
  right: 12px;
  cursor: pointer;
  text-transform: uppercase;
  transition: all 0.2s;
  display: flex;
  align-items: center;
}

.apply-btn:hover,
.apply-btn:focus {
  background-color: var(--color-accent-hover);
  color: rgba(255, 255, 255, 1);
}

.apply-btn__icon {
  color: rgba(255, 255, 255, 0.65);
  font-size: 8px;
  margin-left: 4px;
  margin-top: -1px;
}

/* JOB INFO */
.job-info {
  position: relative;
  z-index: 1;
  margin-bottom: 40px;
  display: flex;
  column-gap: 16px;
  padding-top: 120px;
}

.job-info::before {
  content: '';
  position: absolute;
  width: 100%;
  height: 174px;
  top: 0;
  left: 0;
  background-image: linear-gradient(
    to top,
    rgba(0, 0, 0, 0.7),
    rgba(0, 0, 0, 0.15)
  );
  z-index: -1;
  border-top-right-radius: 8px;
}

.job-info__left {
  padding-left: 42px;
}

.job-info__right {
  flex: 1;
  min-width: 0;
  padding-right: 42px;
}

.job-info__badge {
  width: 55px;
  height: 70px;
  background-color: #d0d335;
  border-radius: 5px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 22px;
  font-weight: 600;
  margin-bottom: 13px;
}

.job-info__below-badge {
  display: flex;
  justify-content: space-between;
}

.job-info__time {
  font-size: 12px;
  transform: translateY(1px);
  color: #494d4f;
}

.bookmark-btn {
  cursor: pointer;
}

.bookmark-btn:hover svg {
  color: var(--color-accent);
}

.bookmark-btn svg {
  color: #d7dbe0;
  transition: all 0.2s;
  font-size: 18px;
}

.bookmark-btn .filled {
  color: var(--color-accent);
}

.job-info__company {
  font-size: 14px;
  font-style: italic;
  color: rgba(255, 255, 255, 0.8);
}

.job-info__description {
  font-size: 14px;
  margin-top: 18px;
  margin-bottom: 12px;
  line-height: 1.4;
  overflow-wrap: anywhere;
  white-space: pre-wrap;
}

.job-info__extras {
  display: flex;
  column-gap: 35px;
}

.job-info__extra {
  font-size: 12px;
  display: flex;
  align-items: center;
  gap: 5px;
}

.job-info__extra-icon {
  height: 23px;
  width: 23px;
  border-radius: 50%;
  background-color: #e4e9ed;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 9px;
  margin-right: 8px;
  color: #a1a8b0;
}

/* QUALIFICATIONS */
.qualifications {
  display: flex;
  padding-left: 42px;
  padding-right: 42px;
  margin-bottom: 30px;
}

.qualifications__sub-text {
  font-size: 13px;
  width: 157px;
  margin-top: 3px;
}

.qualifications__left {
  margin-right: 35px;
}

.qualifications__list {
  display: flex;
  align-items: start;
  flex-wrap: wrap;
  gap: 6px;
}

.qualifications__item {
  font-size: 13px;
  background-color: #e6ebee;
  border-radius: 2px;
  padding: 6px 10px;
  color: #494d4f;
}

/* REVIEWS */
.reviews {
  display: flex;
  padding-left: 42px;
  padding-right: 42px;
}

.reviews__sub-text {
  font-size: 13px;
  width: 157px;
  margin-top: 3px;
}

.reviews__left {
  margin-right: 35px;
}

.reviews__list {
  flex: 1;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: auto auto;
  column-gap: 20px;
  row-gap: 20px;
}

.reviews__item {
  font-size: 13px;
  font-style: italic;
  color: #494d4f;
  position: relative;
  transform-style: preserve-3d;
}

.reviews__item::before {
  content: '“';
  position: absolute;
  font-size: 50px;
  top: -15px;
  left: -10px;
  color: #d2d7db;
  transform: translateZ(-1px);
}

/* FOOTER */
.footer {
  max-width: 1000px;
  padding: 0 12px;
  margin: 0 auto;
  margin-top: 15px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: #a4a9ac;
}

/* COPYRIGHT */
.footer > small {
  font-size: 11px;
  max-width: 200px;
}

.footer > small *::selection {
  background-color: rgba(255, 255, 255, 0.1);
}

.footer > small > p:first-child {
  line-height: 1.2;
}

.footer > small > p:first-child > a {
  text-decoration: underline;
}

.footer > small > p:first-child > svg {
  font-size: 10px;
  margin-right: 4px;
  margin-left: 2px;
  color: #aeb3b6;
}

/* JOBS AVAILABLE */
.footer > p {
  font-size: 11px;
  align-self: flex-start;
}

/* SPINNER */
.spinner {
  position: absolute;
  border-radius: 50%;
  animation: spinner 1s infinite linear;
  left: 50%;
  top: 18%;
  width: 85px;
  height: 85px;
  border-top: 5px solid #e2e7e9;
  border-right: 5px solid #e2e7e9;
  border-bottom: 5px solid #e2e7e9;
  border-left: 5px solid #ccd1d3;
}

.spinner--search {
}

.spinner--job-details {
  left: 50%;
  top: 40%;
  width: 105px;
  height: 105px;
  border-top: 6px solid #d5d9db;
  border-right: 6px solid #d5d9db;
  border-bottom: 6px solid #d5d9db;
  border-left: 6px solid #bbc0c2;
}

.spinner--visible {
  visibility: visible;
}

/* ERROR */
.error {
  background: #fff;
  padding: 14px 20px;
  width: 280px;
  min-height: 46px;
  border-radius: 3px;
  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.15);
  position: absolute;
  top: 15px;
  right: 15px;
  display: flex;
  opacity: 0;
  visibility: hidden;
  transform: translateY(-120px);
  transition: all 0.3s;
}

.error--visible {
  opacity: 1;
  transform: initial;
  visibility: initial;
}

.error__icon {
  font-size: 16px;
  color: rgb(123, 64, 64);
  margin-top: 2px;
}

.error__right {
  margin-left: 10px;
}
/* ... */

